# Py_web_HW_12

./: README.md  pyproject.toml
app_contacts/: main.py
app_contacts/migrations/: env.py
app_contacts/src/database/: config.ini  db.py  models.py
app_contacts/src/repository/: contacts.py  groups.py  users.py
app_contacts/src/routes/: auth.py  contacts.py  groups.py
app_contacts/src/schemas/: contacts.py  groups.py  users.py
test/: app.py  auth.py  config.ini  db.py
