[tool.poetry]
name = "py-web-hw-12"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_12"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"
fastapi-jwt-auth = "^0.5.0"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.6"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
psycopg2 = "^2.9.5"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
